# GoIT_Web_homework_3

./: README.md  factorize.py  pyproject.toml  sorter.py
garbage/: Drake Mikelsson,19  calculator.py
garbage/hdkjlsaj2/ісісіфс/: Тести_10_12_1.doc
garbage/лчомрл111/: Icons - Google Fonts.html  pb_3430811044 (1).jks  pb_3430811044.jks.txt
garbage/лчомрл111/Icons - Google Fonts_files/: cb=gapi(1).loaded_0  cb=gapi.loaded_0  client.js.завантаження  css2  googleapis.proxy.js.завантаження  m=core  proxy.html  rs=AE60u5dMjRfj_5FEQYMH3TPXSpZzPGJs0w
